--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <script src="constants.js"></script>
     <script src="background.js"></script>
+    <script src="bullet.js"></script>
     <script src="obstacle.js"></script>
     <script src="player.js"></script>
     <script src="game.js"></script>
