--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bird Invaders</title>
 
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.js"></script>
   </head>
 
   <body>
