--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Bird Invaders</title>
 
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.js"></script>
   </head>
 
   <body>
+    <h1>Lives: <span>4</span></h1>
     <script src="constants.js"></script>
     <script src="background.js"></script>
     <script src="bullet.js"></script>
